adds apple music integration
